launcher icon add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="islam">আবরারুল হক আসিফ এর ইসলাম ব্লগ</string>
 
     <string name="life_web_link">https://en.wikipedia.org/wiki/Abrarul_Haq_Haqqi</string>
-    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="banner_ad">ca-app-pub-1905179364235619/3645626573</string>
+    <string name="interestial_ad">ca-app-pub-1905179364235619/1949401528</string>
 
 </resources>
